@startuml Statements
skinparam style strictuml
skinparam monochrome true


interface ASTNode {
    getLine(): int
    getColumn(): int
}


interface Statement

class Write {
    expression: Expression
}

class Read {
    expression: Expression
}

class Invocation {
    name: Variable
    params: List<Expression>
}

Statement <|.. Invocation

class If {
     condiciones: List<Expression>
        ifSts: List<Statemment>
        elseSts: List<Statemment>
}

class Return {
    expression: Expression
}

class While {
    condition: Expression
    whileSts: List<Statement>
}

class AbstractStatement {
    line: int
    column: int
}

class Assignment {
    left: Expression
    right: Expression
}


Statement <|.. AbstractStatement


ASTNode <|-- Statement
AbstractStatement <|.. If
AbstractStatement <|.. Write
AbstractStatement <|.. Return
AbstractStatement <|.. While
AbstractStatement <|.. Read


If o-- "0..n" Expression
If o-- "0..n" AbstractStatement

While o-- "0..n" Expression
While o-- "0..n" AbstractStatement

Write o-- "0..n" Expression
Read o-- "0..n" Expression

Return o-- "1" Expression


AbstractStatement <|.. Assignment
Assignment o-- "2" Expression


@enduml
